fix: word style alignment

--- a/src/containers/word-list/Word/Word.module.scss
+++ b/src/containers/word-list/Word/Word.module.scss
@@ -39,13 +39,15 @@
   font-size: 1.6rem;
   overflow-wrap: break-word;
   text-align: left;
-  width: min-content;
+  // width: min-content;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding-left: 1rem;
+    width: 80%;
 }
 
 .wrapper {
@@ -53,6 +55,8 @@
   flex-direction: column;
   height: 100%;
   justify-content: space-evenly;
+  align-items: center;
+  width: 20%;
 }
 
 .difficult,
